# k8s_mcp_extension

./: .gitignore  README.md  pyproject.toml  uv.toml
.github/workflows/: ci.yml  publish-pypi.yml
src/k8s_mcp_server/: __init__.py  __main__.py  cli_executor.py  config.py  errors.py  kubernetes_node.py  node_context.py  node_logs.py  node_shell.py  security.py  server.py  tools.py
tests/: conftest.py
tests/unit/: test_config.py  test_entrypoint.py  test_node_context.py  test_node_logs.py  test_node_shell.py  test_publication.py
